# HRMS-Lite

./: .gitignore  Deployment.md  README.md
backend/: build.sh  pyproject.toml  railway.toml  requirements.txt
backend/attendance/: models.py  serializers.py  views.py
backend/attendance/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/employees/: models.py  serializers.py  views.py
backend/employees/migrations/: 0001_initial.py  0002_alter_employee_options.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: EmptyState.jsx  ErrorMessage.jsx  LoadingSpinner.css  LoadingSpinner.jsx  Modal.css  Modal.jsx  Sidebar.css  Sidebar.jsx
frontend/src/pages/: Attendance.css  Attendance.jsx  Dashboard.css  Dashboard.jsx  Employees.css  Employees.jsx
frontend/src/services/: api.js
